Fixed bug in GUI behaviour where the footer hid main content. when too long. Footer position now adjusts correctly when the main content becomes larger, still remaining on the bottom.

--- a/App/city-feedback/src/main/resources/static/styles.css
+++ b/App/city-feedback/src/main/resources/static/styles.css
@@ -1,6 +1,16 @@
 h2 {
     background: green;
+    margin-bottom: 0.5rem;
 }
+
 header {
     background-color: indianred;
+}
+
+.btn {
+    margin: 0.7rem 0 2rem 0;
+}
+
+footer {
+    margin-top: auto;
 }
